--- a/Notebooks da aula/Dimensionality_Reduction_PCA.ipynb
+++ b/Notebooks da aula/Dimensionality_Reduction_PCA.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "01e2b7ce",
+   "id": "bc899a3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0d00f61c",
+   "id": "f57afddd",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7a8d8b04",
+   "id": "824468bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7a33cff8",
+   "id": "efdfc318",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a9403a63",
+   "id": "d2fd9015",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "45e7186d",
+   "id": "51190ea1",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e756ae5b",
+   "id": "74a1ea40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b6df3b2a",
+   "id": "d47e645b",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2da05fda",
+   "id": "61487c83",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "414bad19",
+   "id": "8fee9437",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "157a359d",
+   "id": "3748e7ce",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e1aed5b9",
+   "id": "2fb1baa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cad7ced4",
+   "id": "db6bdd63",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "653b3c43",
+   "id": "e2a02923",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "eb01364c",
+   "id": "e9050d2a",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8f0b56cc",
+   "id": "414f277e",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b199cdc3",
+   "id": "50fe697f",
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "04fcd907",
+   "id": "6849e0c3",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8c6eb9d9",
+   "id": "0b3aa12e",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fb5abd22",
+   "id": "a9ad3c93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3c6f7572",
+   "id": "0d1c1541",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7b6ab074",
+   "id": "328492f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "be4fcb62",
+   "id": "b605de6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c68e580a",
+   "id": "e9328099",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4ea064c0",
+   "id": "ae2cfd7a",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "724f40ed",
+   "id": "058b830a",
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "96a725a7",
+   "id": "93e7cf06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0511a8e5",
+   "id": "396e7b6b",
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e46181f0",
+   "id": "c6254854",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e894b86d",
+   "id": "c46dab93",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bede1acb",
+   "id": "5f1c0be1",
    "metadata": {},
    "source": [
     "## Exercícios:\n",
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "03ae736f",
+   "id": "373db766",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0c16c7cb",
+   "id": "ac5aae8d",
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "f9e6e76d",
+   "id": "938c3d4f",
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "bd01c0ed",
+   "id": "8319adcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1775670a",
+   "id": "820cbbbd",
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "3b290d61",
+   "id": "ef3e97c9",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ffec2dc",
+   "id": "751f4ae9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "600b081b",
+   "id": "dbcecea8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9addac5e",
+   "id": "8fa40ef8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0efaa6d5",
+   "id": "b1d5743d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4929dcda",
+   "id": "99cb2e7e",
    "metadata": {},
    "source": [
     "## Exercício:\n",
@@ -966,6 +966,10 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
